# droprl

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/train/: Cartpole.yaml  CartpoleDQN.yaml  CartpolePPO.yaml  Cassie.yaml  CassiePPO.yaml  Mock.yaml  MockPPO.yaml  PendulumSAC.yaml  _template.yaml
envs/_template/: README.md  callbacks.py  config.yaml  env.py
envs/cartpole/: config.yaml  env.py
envs/cassie/: __init__.py  callbacks.py  cassie.py  config.yaml  constants.py  env.py  functions.py  health.py  observations.py  requirements.txt  rewards.py  scene_viz.py  viz.py
envs/cassie/assets/model/: cassie.xml  cassie_depth.xml  cassie_hfield.xml  cassie_mass.xml  cassie_no_grav.xml  cassie_noise_terrain.xml  cassie_slosh_mass.xml  cassie_tray_box.xml  cassiepole.xml  cassiepole_x.xml
envs/mock/: __init__.py  config.yaml  env.py
envs/pendulum/: config.yaml  env.py
scripts/: render.py  train.py
src/droprl/: __init__.py  config.py  logging.py
src/droprl/envs/: __init__.py  base.py  registry.py
src/droprl/rllib/: __init__.py  algorithms.py  env_wrapper.py  loader.py  lr_schedule.py  registry.py  render.py  resources.py  run_config.py  runtime.py  tune_logger.py
src/droprl/rllib/lr_schedule/: __init__.py  base.py  cosine.py  dynamic.py  factory.py  fixed.py  linear.py
src/droprl/runs/: __init__.py  checkpoints.py  resolve.py
src/droprl/tasks/: __init__.py  extensions.py
tests/: test_algorithms.py  test_cartpole.py  test_checkpoints.py  test_config.py  test_env_registry.py  test_extensions.py  test_lr_schedule.py  test_obs_filter.py  test_registry_lazy.py  test_train_smoke.py
