[project]
name = "droprl"
version = "0.1.0"
description = "Drop-in RL environments. Train with PPO. Ship it."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<=3.12"
authors = [{ name = "alhussein-jamil" }]
keywords = ["reinforcement-learning", "rllib", "ppo", "robotics", "gymnasium"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium[classic-control]==1.0.0",
  "numpy==1.26.4",
  "pyyaml==6.0.2",
  "ray[rllib]==2.44.1",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "tensorboard==2.19.0",
  "mediapy==1.2.2",
  "imageio==2.37.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.2.0",
  "pytest==8.3.5",
  "ruff==0.11.5",
]

[project.urls]
Homepage = "https://github.com/alhussein-jamil/droprl"
Repository = "https://github.com/alhussein-jamil/droprl"
Issues = "https://github.com/alhussein-jamil/droprl/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests", "envs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: integration tests (Ray training)",
]
